[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/tree-tools/scenes/editor/treetool.gd" type="Script" id=1]
[ext_resource path="res://addons/tree-tools/scenes/editor/grapheditor.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/tree-tools/scenes/editor/node_editor.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/tree-tools/scenes/editor/popup_save_dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/tree-tools/scenes/editor/popup_load_dialog.tscn" type="PackedScene" id=5]

[node name="Tree-tools" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="editor" parent="HSplitContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 802.0
margin_bottom = 586.0

[node name="node_editor" parent="HSplitContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 814.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3

[node name="save_dialog" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 757.0
margin_bottom = 457.0
filters = PoolStringArray( "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation" )

[node name="load_dialog" parent="." instance=ExtResource( 5 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 757.0
margin_bottom = 457.0
filters = PoolStringArray( "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation" )
[connection signal="graphnode_selected" from="HSplitContainer/editor" to="." method="_on_editor_graphnode_selected"]
[connection signal="graphnode_unselected" from="HSplitContainer/editor" to="." method="_on_editor_graphnode_unselected"]
[connection signal="editor_instanced" from="HSplitContainer/node_editor" to="." method="_on_node_editor_editor_instanced"]

[editable path="HSplitContainer/editor"]

[editable path="HSplitContainer/node_editor"]
